[FIX] palette styles overlap each other

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,6 @@
 :root {
-  --color-gray-98: hsl(120deg 8% 98%);
-  --color-gray-90: hsl(120deg 8% 90%);
-  --color-gray-80: hsl(120deg 8% 80%);
-  --color-gray-70: hsl(120deg 8% 70%);
-  --color-gray-40: hsl(120deg 8% 40%);
-  --color-gray-30: hsl(120deg 8% 30%);
-  --color-gray-20: hsl(120deg 8% 20%);
-  --color-gray-16: hsl(120deg 8% 16%);
-  --color-gray-14: hsl(120deg 8% 14%);
-  --color-gray-12: hsl(120deg 8% 12%);
-  --color-gray-10: hsl(120deg 8% 10%);
-
   --color-default-background: var(--color-gray-98);
   --color-default-foreground: var(--color-gray-10);
-
-  --color-primary: hsl(120deg 35% 40%);
-  --color-primary-fade: hsl(120deg 35% 96%);
-  --color-primary-lighter: hsl(120deg 35% 46%);
-  --color-primary-darker: hsl(120deg 35% 34%);
-  --color-primary-opposite: var(--color-gray-98);
 
   --color-react: hsl(191deg 65% 60%);
   --color-next: hsl(0deg 0% 0%);
